--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/tiberiodamaso/Projeto-3-bootcamp-backend#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.7.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
